# RaMAx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RaMA-G.cpp  launch.vs.json
benchmark/: README.md  delta2maf.cpp  downloadMammals.sh  downloadPrimates.sh  filter_maf_by_species.cpp  paf2maf  paf2maf.cpp  sam2maf  sam2maf.cpp  setup_benchmark.sh
benchmark/pair_alignment_result/: simHuman-simChimp.md
doc/: tolist.md
include/: SeqPro.h  align.h  anchor.h  cigar.h  config.hpp  data_process.h  graph.h  hal_converter.h  index.h  ramesh.h  rare_aligner.h  sequence_utils.h  threadpool.h
include/bigBWT/: bwtparse.hpp  utils.h  xerrors.h
include/suffix_array/CaPS-SA/: Suffix_Array.hpp
include/suffix_array/gsa/: gsacak_wrapper.h
src/: RaMA-G.cpp  RaMAx.cpp  rare_aligner.cpp
src/align/: align.cpp  align.h  anchor.cpp  anchor.h  cigar.cpp  multiple_rare_aligner.cpp  pair_rare_aligner.cpp  rare_aligner.cpp
src/anchor/: anchor.cpp  anchor_chunk.cpp  anchor_io.cpp  cluster.cpp
src/graph/: hal_converter.cpp  ramesh.cpp  ramesh_export.cpp  ramesh_graph.cpp  ramesh_node.cpp
src/index/: bigBWT_build.cpp  fm_index.cpp  index.cpp  index.h
src/index/bigBWT/: bwtparse.hpp  newscan.cpp  newscan.hpp  pfbwt.hpp  pfthreads.hpp
src/index/suffix_array/CaPS-SA/: Suffix_Array.cpp  Suffix_Array.hpp
src/index/suffix_array/gsa/: gsacak.c  gsacak.h
src/preprocess/: SeqPro.cpp  data_process.h  fasta_manager.cpp  newick_tree.cpp  raw_data_process.cpp  raw_data_process.hpp  sequence_utils.cpp  split_data.cpp
src/utils/: config.hpp
